--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
   <title>Home</title>
 </head>
 
@@ -41,9 +42,9 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group new ">
-                  <p class="icon"> <a href="#"><span><img src="images/downloadicon.png" class="img-fluid"
-                          alt="downloadicon"></span><input type="email" id="email" class="input-control new "
-                        placeholder="Request App link Via Sms"></p></a>
+                  <p class="icon"><span><img src="images/downloadicon.png" class="img-fluid"
+                        alt="downloadicon"></span><input type="email" id="email" class="input-control new "
+                      placeholder="Request App link Via Sms"></p>
                 </div>
               </div>
 
@@ -75,7 +76,7 @@
           </div>
           <div class="leaderboard-rating">
             <img src="images/leaderboard-cup.png" class="img-fluid" alt="leaderboard-cup">
-            <h4>Leadboards</h4>
+            <h4>Leadboard</h4>
           </div>
           <div class="leaderboard-rating">
             <img src="images/downloadicon.png" class="img-fluid" alt="downloadicon">
@@ -173,20 +174,19 @@
       <div class="row flex-wrap-reverse">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="about_us_content">
-            <form action="">
+            <form action="....">
               <div class="row">
 
                 <div class="form-group">
-                  <label for="text">Your phone:</label>
-                  <input type="text" id="phone" class="input-control">
+                  <label for="text">Name</label>
+                  <input type="Name" id="Name" class="input-control">
                 </div>
               </div>
 
               <div class="form-group">
-                <label for="text">Your phone:</label>
-                <input type="text" id="phone" class="input-control">
+                <label for="phone">Email</label>
+                <input type="phone" id="phone" class="input-control">
               </div>
-
               <div class="form-group">
                 <label for="message">Message</label>
                 <textarea name="Message" id="message" cols="20" rows="4" class="input-control"></textarea>
