--- a/howplay.html
+++ b/howplay.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
   <title>How To Play</title>
 </head>
 
