--- a/howplay.html
+++ b/howplay.html
@@ -20,36 +20,45 @@
   <!-- site howplay start -->
   <div class="howplay">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="howplay-content">
-                    <h3>HOW TO ENGAGE IN FANTASY SPORTS</h3>
-                    <p>Are you confident in your knowledge and skills in fantasy cricket games? Now is the perfect opportunity to put them to the test by joining the premier and most thrilling game in Canada.</p>
-                    <p>Utilize your sports expertise to play and effortlessly assemble your own team from a pool of real players. A robust team can be constructed within 100-point credits. Your team earns points based on the performance of your selected players in on-field matches. It's the ideal moment to showcase your skills and potentially win cash! </p>
-                    <h4>Participate in Fantasy Sport by following these straightforward steps.</h4>
-                    <h4>REGISTER</h4>
-                    <p>Enter your email address, and a mobile app download link will be sent to your email. Download and install the app, then register with your valid details.</p>
-                    <h4>CHOOSE AN UPCOMING MATCH</h4>
-                    <p>Once registered, explore the available multiple matches to participate. Review the list and select your preferred match to play.</p>
-                    <h4>CREATE YOUR TEAM</h4>
-                    <p>Use your sports knowledge to select your players and construct a formidable team with a captain and vice-captain. Choose 11 players, with the flexibility to include 7 players from any of the playing teams.
-                    </p>
-                    <h4>JOIN THE CONTESTS</h4>
-                    <p>With your team ready, start joining the available contests. There are two types of contests.
-                    </p>
-                    <h4>PRACTICE CONTESTS</h4>
-                    <p>Engage in demo games available for practice to refine and test your skills.</p>
-                    <h4>OBSERVE YOUR PLAYERS</h4>
-                    <p>Check the players' results in the live match segment after the game commences. Witness your team's score grow based on the points system as the live match progresses.</p>
-                    <h4>CHECK POINTS AND WITHDRAW WINNINGS</h4>
-                    <p>Finally, review your points and withdraw your winnings. Please note that our games are intended for individuals aged 18 and above. Play responsibly.
-                    </p>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="howplay-content">
+            <h3>HOW TO ENGAGE IN FANTASY SPORTS</h3>
+            <p>Are you confident in your knowledge and skills in fantasy cricket games? Now is the perfect opportunity
+              to put them to the test by joining the premier and most thrilling game in Canada.</p>
+            <p>Utilize your sports expertise to play and effortlessly assemble your own team from a pool of real
+              players. A robust team can be constructed within 100-point credits. Your team earns points based on the
+              performance of your selected players in on-field matches. It's the ideal moment to showcase your skills
+              and potentially win cash! </p>
+            <h4>Participate in Fantasy Sport by following these straightforward steps.</h4>
+            <h4>REGISTER</h4>
+            <p>Enter your email address, and a mobile app download link will be sent to your email. Download and install
+              the app, then register with your valid details.</p>
+            <h4>CHOOSE AN UPCOMING MATCH</h4>
+            <p>Once registered, explore the available multiple matches to participate. Review the list and select your
+              preferred match to play.</p>
+            <h4>CREATE YOUR TEAM</h4>
+            <p>Use your sports knowledge to select your players and construct a formidable team with a captain and
+              vice-captain. Choose 11 players, with the flexibility to include 7 players from any of the playing teams.
+            </p>
+            <h4>JOIN THE CONTESTS</h4>
+            <p>With your team ready, start joining the available contests. There are two types of contests.
+            </p>
+            <h4>PRACTICE CONTESTS</h4>
+            <p>Engage in demo games available for practice to refine and test your skills.</p>
+            <h4>OBSERVE YOUR PLAYERS</h4>
+            <p>Check the players' results in the live match segment after the game commences. Witness your team's score
+              grow based on the points system as the live match progresses.</p>
+            <h4>CHECK POINTS AND WITHDRAW WINNINGS</h4>
+            <p>Finally, review your points and withdraw your winnings. Please note that our games are intended for
+              individuals aged 18 and above. Play responsibly.
+            </p>
+          </div>
         </div>
+      </div>
     </div>
   </div>
-    <!-- site howplay end -->
+  <!-- site howplay end -->
 
   <!-- site footer start -->
   <div class="footer">
