--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
                 <div class="form-group">
                   <label for="text">Name</label>
-                  <input type="Name" id="Name" class="input-control">
+                  <input type="text" id="text" class="input-control">
                 </div>
               </div>
 
               <div class="form-group">
                 <label for="phone">Email</label>
-                <input type="phone" id="phone" class="input-control">
+                <input type="text" id="text" class="input-control">
               </div>
               <div class="form-group">
                 <label for="message">Message</label>
