--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -165,7 +165,11 @@
         <div class="col-12">
           <div class="footer-main">
             <div class="footer-picture">
-              <img src="images/footerpicture1.png" class="img-fluid" alt="footerpicture1">
+              <img src="images/visa.png" class="img-fluid" alt="visa">
+              <img src="images/paypal.png" class="img-fluid" alt="paypal">
+              <img src="images/amex.png" class="img-fluid" alt="amex">
+              <img src="images/stripe.png" class="img-fluid" alt="stripe">
+              <img src="images/mastercard.png" class="img-fluid" alt="mastercard">
             </div>
           </div>
         </div>
