--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
   <title>Home</title>
 </head>
-
 <body>
   <!-- site-banner start -->
   <div class="homebanner-section">
@@ -47,7 +46,6 @@
                       placeholder="Request App link Via Sms"></p>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
@@ -76,7 +74,7 @@
           </div>
           <div class="leaderboard-rating">
             <img src="images/leaderboard-cup.png" class="img-fluid" alt="leaderboard-cup">
-            <h4>Leadboard</h4>
+            <h4>Leaderboard</h4>
           </div>
           <div class="leaderboard-rating">
             <img src="images/downloadicon.png" class="img-fluid" alt="downloadicon">
@@ -102,7 +100,7 @@
               points your team scores, the greater your chances of victory. Don't miss out—download our app now.
             </p>
             <div class="common-btn">
-              <a href="index.html">Download Now</a>
+              <a href="#">Download Now</a>
             </div>
           </div>
         </div>
@@ -193,7 +191,7 @@
               </div>
 
               <div class="form-group text-center">
-                <button class="submit-btn">submit</button>
+                <a href="#" class="submit">submit</button></a>  
               </div>
             </form>
           </div>
