--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -154,9 +154,9 @@
         <div class="col-12">
           <div class="footer-links">
             <ul>
-              <li><a href="index.html">About Us</a></li>
+              <li><a href="#">About Us</a></li>
               <li><a href="howplay.html">How To Play</a></li>
-              <li><a href="index.html">Help</a></li>
+              <li><a href="#">Help</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="terms-condition.html">Terms Condition</a></li>
             </ul>
