--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group new ">
-                  <p class="icon"><span><img src="images/downloadicon.png" class="img-fluid"
-                        alt="downloadicon"></span><input type="email" id="email" class="input-control new "
+                  <p class="icon"><span><img src="images/handicon.png" class="img-fluid"
+                        alt="handicon"></span><input type="email" id="email" class="input-control new "
                       placeholder="Request App link Via Sms"></p>
                 </div>
               </div>
@@ -213,8 +213,9 @@
         <div class="col-12">
           <div class="footer-links">
             <ul>
+              <li><a href="index.html">Home</a></li>
               <li><a href="#">About Us</a></li>
-              <li><a href="howplay.html">How To Play</a></li>
+              <li><a href="howtoplay.html">How To Play</a></li>
               <li><a href="#">Help</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="terms-condition.html">Terms Condition</a></li>
