--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group new ">
-                  <p class="icon"><span><img src="images/handicon.png" class="img-fluid"
+                  <p class="icon"><span><img src="images/downloadicon.png" class="img-fluid"
                         alt="handicon"></span><input type="email" id="email" class="input-control new "
                       placeholder="Request App link Via Sms"></p>
                 </div>
