--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
   <title>Home</title>
 </head>
+
 <body>
   <!-- site-banner start -->
   <div class="homebanner-section">
@@ -41,9 +42,11 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group new ">
-                  <p class="icon"><span><img src="images/downloadicon.png" class="img-fluid"
+                  <a href="#" class="btnsubmit"><img src="images/downloadicon.png" class="img-fluid submiticon">Request
+                    App link Via Sms</a>
+                  <!-- <p class="icon"><span><img src="images/downloadicon.png" class="img-fluid"
                         alt="handicon"></span><input type="email" id="email" class="input-control new "
-                      placeholder="Request App link Via Sms"></p>
+                      placeholder="Request App link Via Sms"></p> -->
                 </div>
               </div>
             </div>
@@ -176,14 +179,14 @@
               <div class="row">
 
                 <div class="form-group">
-                  <label for="text">Name</label>
-                  <input type="text" id="text" class="input-control">
+                  <label for="name">Name</label>
+                  <input type="text" id="name" class="input-control">
                 </div>
               </div>
 
               <div class="form-group">
-                <label for="phone">Email</label>
-                <input type="text" id="text" class="input-control">
+                <label for="email">Email</label>
+                <input type="text" id="email" class="input-control">
               </div>
               <div class="form-group">
                 <label for="message">Message</label>
@@ -191,7 +194,7 @@
               </div>
 
               <div class="form-group text-center">
-                <a href="#" class="submit">submit</button></a>  
+                <a href="#" class="submit">submit</button></a>
               </div>
             </form>
           </div>
