--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="row">
               <div class="col-md-6 col-sm-12">
                 <div class="form-group space">
-                  <input type="text" id="name" class="input-control" placeholder="Mobile Number">
+                  <input type="text" id="name" class="input-control info" placeholder="Mobile Number">
                 </div>
               </div>
               <div class="col-md-6 col-sm-12">
@@ -183,7 +183,6 @@
                   <input type="text" id="name" class="input-control">
                 </div>
               </div>
-
               <div class="form-group">
                 <label for="email">Email</label>
                 <input type="text" id="email" class="input-control">
