--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
                   <td style="width: 50%;">
                     <a href="https://betway.com/sports?s=bw223436&a=AFF4129478893097651&utm_source=223436&utm_medium=Affiliate&utm_campaign=AFF4129478893097651"
                       target="blank">
-                      <span class="first-bonus">Exclusive Bonus</span>
+                      <span class="first-bonus">Welcome Bonus</span>
                       <span class="second-bonus">Free Bet up to $200</span>
                     </a>
                     <a class="sign"
                       href="https://betway.com/sports?s=bw223436&a=AFF4129478893097651&utm_source=223436&utm_medium=Affiliate&utm_campaign=AFF4129478893097651"
                       target="_blank">
-                      <span>anwenden</span>
+                      <span>Sign Up</span>
                     </a>
                   </td>
                 </tr>
@@ -283,11 +283,11 @@
                   </td>
                   <td style="width: 50%;">
                     <a href="https://ic.aff-handler.com/c/48132?sr=2009295" target="blank">
-                      <span class="first-bonus">Exclusive Bonus</span>
+                      <span class="first-bonus">Welcome Bonus</span>
                       <span class="second-bonus">Upto $500 Bonus</span>
                     </a>
                     <a class="sign" href="https://ic.aff-handler.com/c/48132?sr=2009295" target="_blank">
-                      <span>anwenden</span>
+                      <span>Sign Up</span>
                     </a>
                   </td>
                 </tr>
@@ -316,13 +316,13 @@
                   <td style="width: 50%;">
                     <a href="https://www.powerplaybet.com/C.ashx?btag=a_44542b_18746c_&affid=7008682&siteid=44542&adid=18746&c="
                       target="blank">
-                      <span class="first-bonus">Exclusive Bonus</span>
+                      <span class="first-bonus">Welcome Bonus</span>
                       <span class="second-bonus">100% up to 500$</span>
                     </a>
                     <a class="sign"
                       href="https://www.powerplaybet.com/C.ashx?btag=a_44542b_18746c_&affid=7008682&siteid=44542&adid=18746&c="
                       target="_blank">
-                      <span>anwenden</span>
+                      <span>Sign Up</span>
                     </a>
                   </td>
                 </tr>
@@ -351,13 +351,13 @@
                   <td style="width: 50%;">
                     <a href="https://media.toxtren.com/redirect.aspx?pid=250174&bid=1971&redirectURL=https://20media.world"
                       target="blank">
-                      <span class="first-bonus">Exclusive Bonus</span>
+                      <span class="first-bonus">Welcome Bonus</span>
                       <span class="second-bonus">Get a $50 Free bet when you Deposit $50</span>
                     </a>
                     <a class="sign"
                       href="https://media.toxtren.com/redirect.aspx?pid=250174&bid=1971&redirectURL=https://20media.world"
                       target="_blank">
-                      <span>anwenden</span>
+                      <span>Sign Up</span>
                     </a>
                   </td>
                 </tr>
@@ -385,11 +385,11 @@
                   </td>
                   <td style="width: 50%;">
                     <a href="https://lrb.servclick1move.com/?mid=72961_721565" target="blank">
-                      <span class="first-bonus">Exclusive Bonus</span>
+                      <span class="first-bonus">Welcome Bonus</span>
                       <span class="second-bonus">First Deposit Bonus $150</span>
                     </a>
                     <a class="sign" href="https://lrb.servclick1move.com/?mid=72961_721565" target="_blank">
-                      <span>anwenden</span>
+                      <span>Sign Up</span>
                     </a>
                   </td>
                 </tr>
@@ -419,13 +419,13 @@
                   <td style="width: 50%;">
                     <a href="https://welcome.toptrendyinc.com/redirect.aspx?pid=83440&bid=1553&redirectURL=https://22bet.com/"
                       target="blank">
-                      <span class="first-bonus">Exclusive Bonus</span>
-                      <span class="second-bonus">122$ Welcome Bonus</span>
+                      <span class="first-bonus">Welcome Bonus</span>
+                      <span class="second-bonus">122$</span>
                     </a>
                     <a class="sign"
                       href="https://welcome.toptrendyinc.com/redirect.aspx?pid=83440&bid=1553&redirectURL=https://22bet.com/"
                       target="_blank">
-                      <span>anwenden</span>
+                      <span>Sign Up</span>
                     </a>
                   </td>
                 </tr>
