--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 target="_blank">
                 <h6 class="heading_main">
                   Welcome Bonus </h6>
-                <p>Free Bet up to $200</p>
+                <p>Free Bet up to $ 200</p>
               </a>
               <div class="awesome">
                 <a href="https://betway.com/sports?s=bw223436&amp;a=AFF4129478893097651&amp;utm_source=223436&amp;utm_medium=Affiliate&amp;utm_campaign=AFF4129478893097651"
@@ -311,7 +311,7 @@
               <a href="https://ic.aff-handler.com/c/48132?sr=2009295" target="_blank">
                 <h6 class="heading_main">
                   Welcome Bonus </h6>
-                <p>Upto $500 Bonus2</p>
+                <p>Upto $ 500 Bonus</p>
               </a>
               <div class="awesome">
                 <a href="https://ic.aff-handler.com/c/48132?sr=2009295" target="_blank">Sign Up</a>
@@ -355,7 +355,7 @@
                 target="_blank">
                 <h6 class="heading_main">
                   Welcome Bonus </h6>
-                <p>100% up to 500$</p>
+                <p>100% up to 500 $</p>
               </a>
               <div class="awesome">
                 <a href="https://www.powerplaybet.com/C.ashx?btag=a_44542b_18746c_&affid=7008682&siteid=44542&adid=18746&c="
@@ -401,7 +401,7 @@
                 target="_blank">
                 <h6 class="heading_main">
                   Welcome Bonus </h6>
-                <p>Get a $50 Free bet when you Deposit $50</p>
+                <p>Get a $50 Free bet when you Deposit $ 50</p>
               </a>
               <div class="awesome">
                 <a href="https://media.toxtren.com/redirect.aspx?pid=250174&bid=1971&redirectURL=https://20media.world"
@@ -446,7 +446,7 @@
               <a href="https://lrb.servclick1move.com/?mid=72961_721565" target="_blank">
                 <h6 class="heading_main">
                   Welcome Bonus </h6>
-                <p>First Deposit Bonus $150</p>
+                <p>First Deposit Bonus $ 150</p>
               </a>
               <div class="awesome">
                 <a href="https://lrb.servclick1move.com/?mid=72961_721565" target="_blank">Sign Up</a>
@@ -492,7 +492,7 @@
                 target="_blank">
                 <h6 class="heading_main">
                   Welcome Bonus </h6>
-                <p>122$</p>
+                <p>122 $</p>
               </a>
               <div class="awesome">
                 <a href="https://welcome.toptrendyinc.com/redirect.aspx?pid=83440&bid=1553&redirectURL=https://22bet.com/"
