--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
           <div class="encrypted">
             <p><img src="images/encrypted.png" alt="" class="encrypted-img"> 100% secure</p>
-            <p><img src="images/Flag-New-Zealand.webp" alt="" class="encrypted-img"> NZ Players</p>
+            <p><img src="images/Flag-canada.png" alt="" class="encrypted-img"> CA Players</p>
             <p><img src="images/images-removebg-preview.png" alt="" class="encrypted-img">Fast Withdrawals</p>
           </div>
         </div>
